--- a/hub/migrations/templates/president.html
+++ b/hub/migrations/templates/president.html
@@ -86,7 +86,7 @@
     <h1>Isiah Tucker, LICSW</h1>
 
     <div id="president-headshot">
-        <img src="{% static 'images/ITheadshot.jpeg' %}" alt="Isiah Tucker Headshot"/>
+        <img src="{% static 'images/ITheadshot1.png' %}" alt="Isiah Tucker Headshot"/>
     </div>
 
     <div class="president-quote">
