--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -438,7 +438,7 @@ html, body {
     <p><b>Our Why:</b> The conversation that changed everything. The birth of IVOC happened when we finally started listening to our youth.</p>
     <br>
     <div class="homepage-video">
-        <video width= 800px height= 550px controls>
+        <video width= 1100px height= 650px controls controls poster="{% static 'images/birthThumbnail.jpg' %}">
             <source src="{% static 'images/The birth of IVOC.mp4' %}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
