More updates from 6/5 meeting

--- a/hub/migrations/templates/counselors.html
+++ b/hub/migrations/templates/counselors.html
@@ -137,7 +137,7 @@
             <img src="{% static 'images/Precious2.jpg' %}" alt="Precious Sutton Headshot"/>
         </div>
         <div class="counselor-description">
-        <p>Undergraduate student studying Psychology with a minor in Creative Writing at Clark University.</p>
+        <p>Undergraduate student at Clark University.</p>
         </div>
     </div>
 
