--- a/hub/migrations/templates/about.html
+++ b/hub/migrations/templates/about.html
@@ -49,22 +49,6 @@
         width: 90%;
     }
 
-    .curved-underline {
-        position: relative;
-        display: inline-block;
-    }
-
-    .curved-underline::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -5px;
-        width: 100%;
-        height: 10px;
-        border-bottom: 2px solid #AA336A;
-        border-radius: 10px 10px 0 0;
-    }
-
     .curved-underline-animation {
         position: relative;
         display: inline-block;
@@ -75,15 +59,15 @@
         position: absolute;
         left: 0;
         bottom: -5px;
-        height: 2px;
-        background-color: #AA336A;
-        border-radius: 10px 10px 0 0;
-        width: 0;
+        height: 5px; /* Adjust to match SVG height */
+        width: 0; /* Start with width 0 for animation */
+        background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="5"><path d="M0,2.5 Q50,0 100,2.5 T200,2.5" stroke="%23AA336A" stroke-width="2" fill="none"/></svg>') no-repeat;
         transition: width 2s ease;
+        background-size: 100% 100%; /* Ensure the SVG scales correctly */
     }
 
     .animated::after {
-        width: 100%;
+        width: 100%; /* Animate to full width */
     }
 
     .flex-container {
