--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -447,16 +447,18 @@ document.addEventListener('DOMContentLoaded', function () {
     }
 
     function updateSlides() {
-        slides.forEach((slide, index) => {
-            slide.classList.remove('active');
-            if (index === currentIndex) {
-                slide.classList.add('active');
-            }
-        });
+    slides.forEach((slide, index) => {
+        slide.classList.remove('active');
+        if (index === currentIndex) {
+            slide.classList.add('active');
+        }
+    });
 
-        var offset = -currentIndex * (slides[0].clientWidth + 30) + ((slides[0].clientWidth + 30) / 2); // Adjust 30 for margin
-        document.querySelector('.carousel-container').style.transform = 'translateX(' + offset + 'px)';
-    }
+    var slideWidth = slides[0].clientWidth;
+    var additionalOffset = 150; // Adjust this value as needed to move slides to the right
+    var offset = -currentIndex * (slideWidth + 30) + ((slideWidth + 30) / 2) + additionalOffset; // Adjust 30 for margin
+    document.querySelector('.carousel-container').style.transform = 'translateX(' + offset + 'px)';
+}
 
     function nextSlide() {
         currentIndex = (currentIndex + 1) % (totalSlides * 2);
@@ -492,6 +494,11 @@ document.addEventListener('DOMContentLoaded', function () {
     cloneSlides();
     updateSlides(); // Initialize the carousel
 });
+
+
+
+
+
 
 
 document.addEventListener('DOMContentLoaded', function () {
@@ -536,7 +543,7 @@ document.addEventListener('DOMContentLoaded', function () {
 document.addEventListener('DOMContentLoaded', function () {
     var slides = document.querySelectorAll('.slide');
     var slidesContainer = document.querySelector('.slides-container');
-    var currentIndex = 0;
+    var currentIndex = 1;
 
     function showSlide(index) {
         var slideWidth = slides[0].clientWidth; // Get the width of a slide
